--- a/package.json
+++ b/package.json
@@ -1,15 +1,29 @@
 {
   "name": "sonan-mahgora",
   "type": "module",
+  "license": "MIT",
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "eslint": "eslint \"src/**/*.{js,astro}\""
   },
   "dependencies": {
-    "astro": "^2.7.0"
+    "@astrojs/react": "^2.2.1",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
+    "astro": "^2.7.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
+  },
+  "devDependencies": {
+    "@typescript-eslint/parser": "^5.60.0",
+    "astro-eslint-parser": "^0.14.0",
+    "eslint": "^8.43.0",
+    "eslint-plugin-astro": "^0.27.1",
+    "typescript": "^4.0.0"
   }
 }
