--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sonan-mahgora",
+  "name": "sonan-mahgoura",
   "type": "module",
   "license": "MIT",
   "version": "0.0.1",
@@ -9,15 +9,20 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "eslint": "eslint \"src/**/*.{js,astro}\""
+    "eslint": "eslint \"src/**/*.{js,astro}\"",
+    "tsc": "tsc --noEmit"
   },
   "dependencies": {
+    "@astrojs/image": "^0.17.1",
     "@astrojs/react": "^2.2.1",
-    "@types/react": "^18.0.21",
+    "@astrojs/sitemap": "^1.3.3",
+    "@astrojs/tailwind": "^4.0.0",
+    "@types/react": "^18.2.14",
     "@types/react-dom": "^18.0.6",
-    "astro": "^2.7.0",
+    "astro": "^2.6.5",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
     "@typescript-eslint/parser": "^5.60.0",
